--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,25 @@ _testmain.go
 *.exe
 *.test
 *.prof
+### Go template
+# Binaries for programs and plugins
+*.exe~
+*.dll
+*.dylib
+
+# Test binary, built with `go test -c`
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
